--- a/src/style/Font.scss
+++ b/src/style/Font.scss
@@ -15,7 +15,5 @@
   font-weight:400;
   color: var(--text-primary);
   text-decoration: none;
-  transition: color, background, background-color .13s!important;
-  animation-name: example;
-  animation-duration: .57s;
+  box-sizing: border-box;
 }
