--- a/src/style/SplitterPanel.scss
+++ b/src/style/SplitterPanel.scss
@@ -39,9 +39,10 @@
   display: flex;
   width: 100%;
   height: 100%;
-}
-.splitpanes--vertical .splitpanes__pane {
-    transition: width .2s ease-out;
+  .splitpanes__pane {
+    transition: none!important;
+    animation-duration: 0!important;
+  }
 }
 .splitpanes__pane {
     width: 100%;
@@ -66,9 +67,13 @@
     cursor: col-resize;
 }
 .splitpanes__splitter {
-    touch-action: none;
+  touch-action: none;
 }
 
 .default-theme.splitpanes--horizontal > .splitpanes__splitter, .default-theme .splitpanes--horizontal > .splitpanes__splitter{
   background-color:var(--background-primary);
+}
+:root {
+    --sidebar-transition-duration: 0!important;
+    --sidebar-transition-timing-function: none!important;
 }
