--- a/src/style/ThemeModes.scss
+++ b/src/style/ThemeModes.scss
@@ -1,28 +1,36 @@
 .theme-dark {
   --background-primary: black;
+  --background-tilt: rgba(255, 255, 255, 0.05);
 
-  --text-primary: #dfdfdfd3;
+  --text-primary: rgba(255, 255, 255, 0.86);
   --text-header: #bbe574;
   --text-descr: #bbe57480;
-  --text-data: rgba(223, 223, 223, 0.8);
+  --text-data: rgba(255, 255, 255, 0.6);
   --text-menu: #ffff80;
 
   --text-link: rgba(194, 194, 73, 0.973);
   --text-link-visited: #bbe574;
 
   --color-scheme: dark;
-  --border-primary: #575766;
-  --border-card: #575766;
+  --border-primary: #575766e7;
+  --border-card: #575766e7;
+  --border-mix: #575766e7;
   --border-secondary: #696967;
   --splitter-box: lightyellow;
   --input-color: rgba(223, 223, 223, 0.5);
 
-  --scrollbar: #bbe574;
-  --size-margin: 6px;
-  --box-margin: 3px;
+  --scrollbar: #a87432;
+  --size-margin: 8px;
+  --box-margin: 4px;
+
+  --lightbox-back: rgba(0, 0, 0, 0.7);
+  --border-width:2px;
 }
+
 .theme-light {
   --background-primary: rgb(230, 230, 230);
+  --background-tilt: rgba(0, 0, 0, 0.05);
+
   --link: #000;
   --link-visited: #000;
   --text-primary: #000;
@@ -32,9 +40,13 @@
   --border-primary: #535353;
   --border-secondary: #000;
   --border-card: #535353;
+  --border-mix: #535353e7;
   --input-color: rgba(023, 023, 023, 0.5);
   --splitter-box: purple;
   --scrollbar: #53535375;
   --size-margin: 8px;
   --box-margin: 4px;
+
+  --lightbox-back: rgba(230, 230, 230, 0.7);
+  --border-width:2px;
 }
