--- a/src/style/LightBox.scss
+++ b/src/style/LightBox.scss
@@ -82,7 +82,7 @@
         position:relative;
         width:100%;
         height:100%;
-        max-height: calc(100% - 32px);
+        max-height: calc(100% - 27px);
 
         .VuePdfApp{
           max-width: 100%;
@@ -95,8 +95,8 @@
       .vue-load-image{
         width:100%;
         height:100%;
-        max-height: calc(100% - 20px);
-        max-width: calc(100% - 20px);
+        max-height: calc(100% );
+        max-width: calc(100% );
         padding:10px;
         white-space: pre-wrap;
         overflow-y:hidden;
@@ -132,6 +132,7 @@
            color:  var(--link)
           }
           .navItem{
+            color: var(--text-menu);
             text-align: center;
             font-size:14pt;
             flex-grow: 1;
@@ -182,7 +183,7 @@
 
 
 .txt{
-  height: calc(100% - 57px);
+  height: calc(100% - 52px);
   div{
    height:100%;
     .tiptap{
