major cleanup of content dataView code

--- a/src/style/ContentView.scss
+++ b/src/style/ContentView.scss
@@ -86,7 +86,7 @@
         }
 
         .vue-load-image{
-          height:100%;
+          height: fit-content!important;
           width:100%;
           img {
             width: 100%;
