--- a/src/style/ContentView.scss
+++ b/src/style/ContentView.scss
@@ -5,34 +5,72 @@
   to {opacity: 1;}
 }
 
-.tab{
-  position: absolute;
-  z-index:3;
-  width: 20px;
-  background: rgb(40, 40, 40);
-  font-size:16px;
-  right:0;
-  padding:4px;
-  text-align: center;
-  vertical-align: middle;
-  height:90px;
-  line-height: 90px;
-  clip-path: polygon(0% 22%, 100% 0, 100% 100%, 0% 78%);
-  a{
-    color:var(--link-visited);
+.vue-slider-dot-handle {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    border-radius: 0!important;
+    background-color: transparent!important;
+    box-sizing: border-box;
+    box-shadow: none!important;
+}
+.vue-slider{
+
+  padding:2px!important;
+}
+.vue-slider-dot-handle-focus {
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    border-radius: 0!important;
+    background-color: transparent!important;
+    box-sizing: border-box;
+    box-shadow: none!important;
+}
+
+.vue-slider-rail {
+    background-color: var(--border-card);
+    border-radius: 15px;
+}
+
+#content-tabs{
+  display: flex;
+  justify-content: flex-end;
+  #slide{
+    margin: var(--box-margin);
+    margin-bottom:0;
+    margin-right:0;
+    height:18px;
+    padding: var(--box-margin);
+    width:150px;
+    border: $tableBorder;
+    border-bottom:0;
+    .vue-slider-process {
+        background-color: var(--text-menu);
+        border-radius: 15px;
+    }
   }
-}
-#tabInfo{
-  margin: 0 auto;
-  margin-right: var(--box-margin);
-  margin-bottom: var(--box-margin);
-  bottom: var(--box-margin);
-}
-#tabAdd{
-  margin: 0 auto;
-  margin-right: var(--box-margin);
-  margin-bottom: var(--box-margin);
-  bottom: calc(var(--box-margin) + 110px);
+  .tab{
+    width: 30px;
+    background:none;
+    font-size:18px;
+    right:0;
+    height:16px;
+    text-align: center;
+    vertical-align: middle;
+    border: $tableBorder;
+    border-bottom:0;
+    // clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+    a{
+         color: var(--text-menu);
+    }
+  }
+
+  #tabAdd{
+    margin: var(--box-margin);
+    margin-bottom:0;
+    height:18px;
+  }
 }
 
 .contentView{
@@ -49,7 +87,7 @@
 
     .grid{
       border: $tableBorder;
-      margin-top: var(--box-margin);
+      margin-top: 0;
       margin-right: var(--box-margin);
       margin-bottom: var(--box-margin);
       width: calc(100% - var(--box-margin));
