--- a/src/style/MixtapeView.scss
+++ b/src/style/MixtapeView.scss
@@ -12,11 +12,11 @@
   .mixtapeView{
     height:calc(100%);
     width:calc(100%);
-    margin-top: -6px;
+    margin-top: -7px;
     border: $tableBorder;
 
     .p-dataview{
-      height:calc(100%);
+      height:100%;
       width:100%;
 
       .p-dataview-content{
@@ -89,21 +89,29 @@
     margin-left: 0;
     margin-top: 0;
 }
-.p-tabview-panels, .p-tabview-panel, .p-tabview{
+.tab-content{
   height:100%;
   width:100%;
 }
 
-.p-tabview-header {
+.tab-active{
+  opacity: 1!important;
+    z-index:2!important;
+    background: var(--background-primary);
+    opacity: 1!important;
+}
+.tab-header {
+  cursor: pointer;
+  display: inline-flex;
+  height:30px;
   opacity: 0.8;
   z-index:0;
   margin-right:var(--box-margin);
+  padding:var(--box-margin);
+  margin-bottom:var(--box-margin);
   border:1px solid var(--border-primary);
-  font-weight: 700;
   transition: box-shadow 0.2s;
-  .p-tabview-title{
-    color: var(--text-menu);
-  }
+  color: var(--text-menu);
 }
 .p-tabview-nav-container{
   width:100%;
