--- a/src/scss/components/SplitterPanel.scss
+++ b/src/scss/components/SplitterPanel.scss
@@ -1,4 +1,5 @@
-@import "./ThemeModes";
+@import "../Theme";
+
 // content pane
 .splitpanes.default-theme .splitpanes__pane{
     background-color: rgba(0,0,0,0);
