--- a/src/scss/components/Canvas.scss
+++ b/src/scss/components/Canvas.scss
@@ -1,5 +1,5 @@
 
-@import "./ThemeModes";
+@import "../Theme";
 .three{
   width:calc(100% - var(--size-margin));
   max-width:calc(100% - var(--size-margin));
