--- a/src/scss/components/MixtapeView.scss
+++ b/src/scss/components/MixtapeView.scss
@@ -1,13 +1,14 @@
-@import "./ThemeModes";
+@import "../Theme";
 
 @keyframes example {
   from {opacity: 0;}
   to {opacity: 1;}
 }
 .mixtape-pane{
-    height:100%;
-    max-width:100%;
-    border-bottom:$tableBorder;
+  height:100%;
+  max-width:100%;
+  border-bottom:$tableBorder;
+  overflow:hidden;
 
   .mixtapeView{
     height:calc(100%);
@@ -77,20 +78,9 @@
     }
   }
 }
-.p-component, .p-component * {
-    box-sizing: border-box;
-}
-.header{
-  border-bottom: $tableBorder;
-}
 
-.grid-nogutter {
-    margin-right: 0;
-    margin-left: 0;
-    margin-top: 0;
-}
 .tab-content{
-  height:100%;
+  height: calc(100% - 26px);
   width:100%;
 }
 
@@ -112,27 +102,6 @@
   border:1px solid var(--border-primary);
   transition: box-shadow 0.2s;
   color: var(--text-menu);
+  font-size:16px;
 }
-.p-tabview-nav-container{
-  width:100%;
-}
-.p-tabview .p-tabview-nav li .p-tabview-nav-link {
-    opacity: 0.6;
-    height: 100%;
-    width: 100%;
-    margin:0;
-    padding: var(--box-margin);
-    padding-bottom: var(--size-margin);
-    transition: box-shadow 0.2s;
-    .p-tabview-title{
-      color: var(--text-menu);
-    }
-}
-.p-highlight{
-  opacity: 1!important;
-  .p-tabview-nav-link  {
-    z-index:2!important;
-    background: var(--background-primary);
-    opacity: 1!important;
-  }
-}
+
