--- a/src/scss/Typography.scss
+++ b/src/scss/Typography.scss
@@ -10,7 +10,7 @@
   text-rendering: initial;
   font-family: "ＭＳ Ｐゴシック";
   font-weight:400;
-  color: var(--text-primary);
+  color: var(--text-content);
   text-decoration: none;
   box-sizing: border-box;
 }
