--- a/src/scss/Main.scss
+++ b/src/scss/Main.scss
@@ -48,7 +48,7 @@ html, body {
       width:100%;
       height:100%;
       .mixtape-pane{
-        height:calc(100% - 260px - (var(--box-margin) * 4));
+        max-height:calc(100% - 267px - (var(--box-margin) * 2));
         width:calc(100% - var(--size-margin));
         margin:var(--box-margin)
       }
@@ -110,6 +110,7 @@ html, body {
           border:0;
           background-color: rgba(0,0,0,0);
           outline:0;
+          color: var(--text-header);
         }
         ::placeholder {
           color: var(--text-header);
