--- a/src/scss/components/LightBox.scss
+++ b/src/scss/components/LightBox.scss
@@ -7,7 +7,23 @@
   background: none !important;
   height: 100%;
 }
+input{
+  background: black;
+  border: 1px solid white;
+  width: -webkit-fill-available;
+  font-size:14px;
+  border:0;
+  background-color: rgba(0,0,0,0);
+  outline:0;
+  color: var(--text-header);
+}
+::placeholder {
+  color: var(--text-header);
+  opacity: 0.51;
+}
+
   .resizable-component{
+    position:relative;
     pointer-events:auto;
     padding: 0;
     border: 1px solid var(--border-primary);
